# KK_100_Days_of_MLOps

./: README.md
days/day-01-virtual-environment/: README.md  solution.sh
days/day-02-jupyter-notebook-server/: README.md  jupyter_lab_config.py  solution.sh
days/day-03-uv-lockfile/: README.md  requirements.in  solution.sh
days/day-04-ml-project-structure/: README.md  solution.sh
days/day-05-makefile/: Makefile  README.md  solution.sh
days/day-06-code-quality/: README.md  solution.sh
days/day-07-python-package/: README.md  pyproject.toml  solution.sh
days/day-08-pre-commit-hooks/: .pre-commit-config.yaml  README.md  solution.sh
days/day-09-cookiecutter/: README.md  solution.sh
days/day-09-cookiecutter/template/{{cookiecutter.project_name}}/: README.md
days/day-10-dvc-init/: README.md  solution.sh
days/day-11-dvc-track-dataset/: README.md  solution.sh
days/day-12-dvc-remote-storage/: README.md  dvc-config  solution.sh
days/day-13-dvc-pull/: README.md  solution.sh
days/day-14-dvc-pipeline/: README.md  solution.sh
days/day-15-dvc-params/: README.md  solution.sh
days/day-16-dvc-metrics/: README.md  solution.sh
days/day-17-dvc-experiments/: README.md  solution.sh
